<resources>
    <string name="field_book">Field Book</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_clear">Clear</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_confirm">Are you sure?</string>
    <string name="dialog_import">Import</string>
    <string name="dialog_warning">Warning</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_go">Go</string>
    <string name="dialog_save_error_title">Save Error</string>
    <string name="dialog_back">Back</string>
    <string name="dialog_scan">Scan</string>
    <string name="dialog_sort_by">Sort By</string>
    <string name="dialog_enable">Enable</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_accept">Accept</string>
    <string name="dialog_exit">Exit</string>
    <string name="barcode_scanner_text">Scan a barcode</string>
    <string name="appbar_more_options">More Options</string>
    <string name="appbar_back">Back</string>
    <string name="startup_sample_data_title">Sample data</string>
    <string name="startup_sample_data_message">Load sample data?</string>
    <string name="app_intro_intro_title_slide1">Welcome to Field Book!</string>
    <string name="app_intro_intro_summary_slide1">Collecting data in the field has traditionally required writing and transcribing from paper notebooks. Field Book was created as a digital solution for data capture that enables increased collection speed with greater data integrity.</string>
    <string name="app_intro_intro_title_slide2">Features and Customization</string>
    <string name="app_intro_intro_summary_slide2">Data is entered into Field Book with custom trait layouts that are designed to simplify data input and minimize mistakes.\n\n By default, collected data is stored locally, but Field Book supports the Breeding API which allows it to send data to BrAPI-compatible systems.</string>
    <string name="app_intro_required_setup_title">Required Setup</string>
    <string name="app_intro_required_setup_summary">To get started using Field Book, grant the necessary permissions for the app and then define a folder where your data will be stored.</string>
    <string name="app_intro_permissions_title">Permissions</string>
    <string name="app_intro_permissions_warning">Please grant the necessary permissions</string>
    <string name="app_intro_storage_title">Define Storage</string>
    <string name="app_intro_storage_summary">Define a folder where your data will be stored.</string>
    <string name="app_intro_storage_warning">Please set the storage location</string>
    <string name="app_intro_required_optional_title">Optional Setup</string>
    <string name="app_intro_required_optional_summary">These optional settings customize Field Book and can be adjusted in the Field Book Settings.</string>
    <string name="app_intro_load_sample_data_title">Load Sample Data</string>
    <string name="app_intro_load_sample_data_summary">Import a sample database that includes example fields and traits.</string>
    <string name="app_intro_tutorial_title">Tutorial</string>
    <string name="app_intro_tutorial_summary">Add a help icon to the top toolbar that describes features throughout the app.</string>
    <string name="app_intro_high_contrast_title">High Contrast Theme</string>
    <string name="app_intro_high_contrast_summary">Enable a high contrast theme for better visibility on eInk devices.</string>
    <string name="storage_definer_title">Storage Location</string>
    <string name="storage_definer_summary">Please select or create a folder that Field Book can use to store app data.</string>
    <string name="define_button_text">Choose Folder</string>
    <string name="permission_rationale_storage">Access to the device\'s files is required.</string>
    <string name="permission_rationale_storage_import">Importing files requires access to the device\'s files.</string>
    <string name="permission_rationale_storage_export">Exporting data requires access to the device\'s files.</string>
    <string name="permission_rationale_trait_features">Collecting data requires access to the device\'s files, microphone, and camera.</string>
    <string name="permission_ask_bluetooth">Please accept bluetooth permissions.</string>
    <string name="settings_fields">Fields</string>
    <string name="settings_traits">Traits</string>
    <string name="settings_collect">Collect</string>
    <string name="settings_export">Export</string>
    <string name="settings_advanced">Settings</string>
    <string name="settings_profile">Profile</string>
    <string name="settings_statistics">Statistics</string>
    <string name="act_config_fuzzy_search_failed">Database could not retrieve a field or plot with code: %s</string>
    <string name="act_config_fuzzy_search_error">Something went wrong when searching for %s</string>
    <string name="act_config_search_fab_content_description">Search all plots and fields to load/navigate to the barcoded item.</string>
    <string name="import_source_local">Local storage</string>
    <string name="import_source_cloud">Cloud storage</string>
    <string name="import_source_brapi" translatable="false">BrAPI</string>
    <string name="import_source_ask">Always ask</string>
    <string name="import_dialog_importing">Please wait…</string>
    <string name="import_error_general">Error importing</string>
    <string name="act_file_explorer_no_file_error">No field book directories could be found.</string>
    <string name="warning_field_missing">No field is currently loaded. Please load a field before collecting data.</string>
    <string name="warning_traits_missing">No traits exist. Please create traits before collecting data.</string>
    <string name="changelog_title">Changelog</string>
    <string name="group_archived_value">Archived</string>
    <string name="fields_ungrouped">Ungrouped</string>
    <string name="dialog_group_options">Grouping Options</string>
    <string name="group_existing">Existing group</string>
    <string name="group_archive">Archive</string>
    <string name="group_new">New group</string>
    <string name="group_remove">Remove from group</string>
    <string name="create_new_group">Create New Group</string>
    <string name="dialog_group_name">Group Name</string>
    <string name="dialog_group_name_warning">Field cannot be blank</string>
    <string name="menu_group">Group</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_groups_toggle">Toggle Groups Visibility</string>
    <string name="group_toggle_icon">Toggle Group</string>
    <string name="archived_fields">Archived Fields</string>
    <string name="menu_unarchive">Remove from archive</string>
    <string name="menu_collapse_all">Collapse All</string>
    <string name="menu_expand_all">Expand All</string>
    <string name="fields_select_all">Select All</string>
    <string name="fields_export">Export</string>
    <string name="fields_delete">Delete</string>
    <string name="trait_parameter_decimal_places">Decimal Places</string>
    <string name="trait_parameter_decimal_places_no_restriction">No restriction</string>
    <string name="trait_parameter_decimal_places_integer_only">Integers only</string>
    <string name="trait_parameter_decimal_places_allowed">Allow decimal input</string>
    <string name="trait_parameter_decimal_places_custom">Maximum decimal places:</string>
    <string name="trait_parameter_decimal_places_custom_hint">1–10</string>
    <string name="search_dialog_add">Add</string>
    <string name="search_dialog_clear">Clear</string>
    <string name="preferences_profile_person_title">Person</string>
    <string name="preferences_profile_set_person">Person Name</string>
    <string name="preferences_profile_require_interval_title">Verification Interval</string>
    <string name="preferences_profile_device_title">Device</string>
    <string name="preferences_profile_set_device_name">Device Name</string>
    <string name="preference_language_default">System Language</string>
    <string name="language_en" translatable="false">English</string>
    <string name="language_am" translatable="false">አማርኛ</string>
    <string name="language_ar" translatable="false">اَلْعَرَبِيَّةُ</string>
    <string name="language_bn" translatable="false">বাংলা</string>
    <string name="language_de" translatable="false">Deutsche</string>
    <string name="language_es" translatable="false">Español</string>
    <string name="language_fr" translatable="false">Français</string>
    <string name="language_hi" translatable="false">हिन्दी</string>
    <string name="language_it" translatable="false">Italiana</string>
    <string name="language_ja" translatable="false">日本語</string>
    <string name="language_om_rET" translatable="false">Afaan Oromoo</string>
    <string name="language_pt_rBR" translatable="false">Português</string>
    <string name="language_ru" translatable="false">Русский</string>
    <string name="language_sv_rSE" translatable="false">Svenska</string>
    <string name="language_vi_vRN" translatable="false">Tiếng Việt</string>
    <string name="language_zh_rCN" translatable="false">简体字</string>
    <string name="preferences_location_defaults_title">GeoCoordinates</string>
    <string name="pref_general_location_collection_title">Collection Level</string>
    <string name="pref_coordinate_format_title">Collection Format</string>
    <string name="pref_geonav_category_title">GeoNav</string>
    <string name="pref_geonav_enable_title">Enable GeoNav</string>
    <string name="pref_geonav_enable_summary">Navigate fields using device location</string>
    <string name="pref_geonav_search_method_title">Search Method</string>
    <string name="pref_geonav_search_method_summary">The %s method used to search for plots in GeoNav</string>
    <string name="pref_geonav_search_trapezoid_d1_title">Trapezoid Base (km)</string>
    <string name="pref_geonav_search_trapezoid_d1_summary">The shorter base of the trapezoid is %s km</string>
    <string name="pref_geonav_search_trapezoid_d2_title">Trapezoid Distance (km)</string>
    <string name="pref_geonav_search_trapezoid_d2_summary">The distance from the user to the opposite end of the trapezoid is %s km</string>
    <string name="pref_geonav_search_angle_summary">GeoNav creates a trapezoid in front of the user, the angle closest to the user is defined as %s°</string>
    <string name="pref_geonav_search_angle_title">GeoNav Search Angle (degrees)</string>
    <string name="pref_geonav_log">GeoNav Log</string>
    <string name="pref_geonav_update_interval_title">Update Interval (s)</string>
    <string name="pref_geonav_update_interval_summary">The time between location updates is %ss</string>
    <string name="pref_geonav_pair">Location Provider</string>
    <string name="stats_first_day">Scroll to the first day with a collected observation</string>
    <string name="stats_last_day">Scroll to the last day with a collected observation</string>
    <string name="stats_calendar_range">Select a date range to filter the displayed dates</string>
    <string name="stats_counter">Swap the date with the number of observations collected that day</string>
    <string name="view_trait_photo_settings_preview_title">Preview</string>
    <string name="view_trait_photo_settings_resolution_title">Target Resolution</string>
    <string name="view_trait_photo_settings_white_balance_title">Auto White Balance</string>
    <string name="view_trait_photo_settings_auto_focus_title">Auto Focus</string>
    <string name="pref_geonav_distance_threshold_summary">GeoNav automatically stops when distance from all plots exceeds this value in kilometers.</string>
    <string name="pref_geonav_distance_threshold_title">Proximity Check</string>
</resources>