<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <Preference
            android:icon="@drawable/ic_de"
            android:key="de"
            android:title="@string/language_de" />

        <Preference
            android:icon="@drawable/ic_us"
            android:key="en"
            android:title="@string/language_en" />

        <Preference
            android:icon="@drawable/ic_mx"
            android:key="spa"
            android:title="@string/language_es" />

        <Preference
            android:icon="@drawable/ic_fr"
            android:key="fr"
            android:title="@string/language_fr" />

        <Preference
            android:icon="@drawable/ic_it"
            android:key="it"
            android:title="@string/language_it" />


</PreferenceScreen>