<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/stats_first_day"
        android:icon="@drawable/ic_stats_scroll_top"
        android:title="@string/stats_first_day"
        app:showAsAction="always" />

    <item
        android:id="@+id/stats_last_day"
        android:icon="@drawable/ic_stats_scroll_bottom"
        android:title="@string/stats_last_day"
        app:showAsAction="always" />

    <item
        android:id="@+id/stats_calendar_range"
        android:icon="@drawable/ic_stats_calendar_range"
        android:title="@string/stats_calendar_range"
        app:showAsAction="always" />

    <item
        android:id="@+id/stats_counter"
        android:icon="@drawable/ic_stats_counter"
        android:title="@string/stats_counter"
        app:showAsAction="always" />

</menu>