<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/view_trait_usb_photo_preview_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_trait_photo_settings_preview_title"
            android:checked="true"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/view_trait_usb_photo_white_balance_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/view_trait_photo_settings_white_balance_title"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_trait_usb_photo_preview_cb" />

        <CheckBox
            android:id="@+id/view_trait_usb_photo_auto_focus_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/view_trait_photo_settings_auto_focus_title"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_trait_usb_photo_white_balance_cb" />

        <TextView
            android:id="@+id/view_trait_usb_photo_settings_resolution_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_trait_photo_settings_resolution_title"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_trait_usb_photo_auto_focus_cb" />

        <RadioGroup
            android:layout_margin="16dp"
            android:id="@+id/view_trait_usb_photo_settings_resolution_rg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_trait_usb_photo_settings_resolution_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

